BetterStructures 1.7.8 - [New] Improved commands - [New] Added /logify command to allow admins to easily upload their latest log to maclo.gs - [New] Getting close to the public release of the new modular builds system - [New] Improved installation process to future-proof installation of elitemobs, fixing a problem with admins installing content out of order - [Fix] Fix for some Minecraft versions experiencing errors with biomes